# COMP2432_APO

./: G02_projectPlan.docx  Ggg_projectPlan.docx  README.md
COMP2432_project_G02/: CMakeLists.txt  for_StoneDu.c  main.c  main.h  test.txt  tools.c  tools.h  userProcess.c
COMP2432_project_G02/classes/: appointment.c  appointment.h  scheduling.c  scheduling.h  time_type.c  time_type.h
COMP2432_project_G02/modules/: appointment_module.c  modules.h  output_module.c  output_module.h  reschedule_algorithm_unit_test.c  schedule_module.c  tempCodeRunnerFile.c
COMP2432_project_G02/output/: Ggg_01_FCFS.txt  Ggg_02_FCFS.txt  Ggg_02_Priority.txt  Ggg_03_SRT.txt
COMP2432_project_G02/protocol/: appointment_notification_protocol.c  appointment_notification_protocol.h  coding_tools.c  coding_tools.h  protocol method interface definition  protocol.h  prototype_of_pipe_usage.c  schedule_requiring_protocol.c  schedule_requiring_protocol.h
G02_prototype/: CMakeLists.txt  G02_prototype.c  G02_prototype.h  tools.c  userProcess.c
G02_prototype/classes/: appointment.h  scheduling.h  time_type.c  time_type.h  vector.c  vector.h
G02_prototype/modules/: appointment_module.c  modules.h  output_module interface definition  output_module.c  schedule_module.c
G02_prototype/protocol/: appointment_notification_protocol.c  appointment_notification_protocol.h  coding_tools.c  coding_tools.h
